--- a/static/css/mypage.css
+++ b/static/css/mypage.css
@@ -5,7 +5,7 @@
 }
 
 html{
-    /*overflow: scroll;*/
+    /*overflow: hidden;*/
 }
 
 body {
@@ -63,19 +63,27 @@ body {
         margin-left: auto;
         .menuButton {
             padding: 10px 20px;
-            font-size: 1.7em;
+            font-size: 2em;
             cursor: pointer;
             background-color: #2ABCA7;
             border: 1px solid #EAFAF8;
             border-radius: 10px;
             color: #FAFAFA;
         }
+        .menuButton:hover {
+            background-color: #279c8f;
+        }
+
+        .menuButton:active {
+            background-color: #248f80;
+            transform: scale(0.95);
+        }
         .menu {
             display: none;
             position: absolute;
-            right: 0;
             background-color: white;
             border: 1px solid #ddd;
+            right: 0;
             box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
             border-radius: 8px;
             padding: 20px;
@@ -107,13 +115,13 @@ body {
             padding: 10px 20px;
             margin-right: 10px;
             cursor: pointer;
-            background-color: #279c8f;
+            background-color: #2ABCA7;
             color: white;
             border-radius: 5px 5px 0 0;
             font-weight: bold;
             border: 1px solid #ddd;
             &:hover {
-                background-color: #279c8f;
+                background-color: #248f80;
             }
 
         }
@@ -124,7 +132,7 @@ body {
             background-color: #fff;
             border-radius: 0 0 5px 5px;
             height: 40vh;
-            overflow-y: scroll;
+            overflow-y: auto;
             /*padding: 0 15px 15px 15px;*/
             table {
                 display: block;
@@ -165,6 +173,7 @@ body {
                     z-index: -1;
                 }
             }
+
             /* スクロールバーの全体のスタイル */
             &::-webkit-scrollbar {
                 width: 15px;
@@ -178,14 +187,15 @@ body {
 
             /* スクロールバーのつまみ（ドラッグする部分） */
             &::-webkit-scrollbar-thumb {
-                background: #279c8f;
+                background-color: #2ABCA7;
                 border-radius: 10px;
                 border: 3px solid #eeefef;
             }
 
+
             /* スクロールバーのつまみをホバーした時のスタイル */
-            ::-webkit-scrollbar-thumb:hover {
-                background: #747474;
+            &::-webkit-scrollbar-thumb:hover {
+                background-color: #248f80;
             }
         }
         .tab-switch:checked + .tab-label {
@@ -198,4 +208,3 @@ body {
         }
     }
 }
-
