--- a/templates/mypages/subpages/health.html
+++ b/templates/mypages/subpages/health.html
@@ -17,7 +17,7 @@
             <table>
                 <tr>
                     <td>体温:</td>
-                    <td><input type="number" step="0.1" name="Temperature" required></td>
+                    <td><input type="number" step="0.1" name="Temperature" min="30" max="45" required></td>
                 </tr>
                 <tr>
                     <td>関節・筋肉痛:</td>
