--- a/templates/mypages/subpages/vaccine.html
+++ b/templates/mypages/subpages/vaccine.html
@@ -18,21 +18,21 @@
             <table>
                 <tr>
                     <td>接種日</td>
-                    <td><input type="date" name="vaccination_date" required></td>
+                    <td><input type="date" name="vaccine_date" required></td>
                 </tr>
                 <tr>
                     <td>ワクチンの種類を選んでください:</td>
                     <td>
-                        <select id="vaccine" name="vaccine">
-                            <option value="pfizer">ファイザー</option>
-                            <option value="moderna">モデルナ</option>
-                            <option value="other">その他</option>
+                        <select id="vaccine" name="vaccine_name">
+                            <option value="ファイザー">ファイザー</option>
+                            <option value="モデルな">モデルナ</option>
+                            <option value="その他">その他</option>
                         </select>
                     </td>
                 </tr>
             </table>
-            <button type="submit">送信</button>
             <button type="reset">消去</button>
+            <button type="submit">送信</button>
         </form>
     </div>
 </body>
