--- a/static/css/mypage.css
+++ b/static/css/mypage.css
@@ -1,3 +1,10 @@
+:root{
+    --theme-color:#2ABCA7;
+    --theme-hover:#279c8f;
+    --bg-glay: #fff5ec;
+}
+
+
 * {
     margin: 0;
     padding: 0;
@@ -22,16 +29,26 @@ body {
 }
 
 #header {
-    background-color: #2ABCA7;
+    background-color: var(--theme-color);
     color: #fff;
     padding: 10px;
     text-align: center;
     font-family: 'Roboto', sans-serif;
     margin-bottom: 10px;
-
-    h1 {
-        font-weight: bold;
-        letter-spacing: 1px;
+    display: flex;
+    width: 100%;
+    #titles{
+        width: 100%;
+        h1 {
+            font-weight: bold;
+            letter-spacing: 1px;
+        }
+    }
+    img{
+        position: absolute;
+        right: 5%;
+        top : -6%;
+        width: 20%;
     }
 }
 
@@ -43,17 +60,17 @@ body {
     display: flex;
 
     #information {
-        border: 2px solid #2ABCA7;
+        border: 2px solid var(--theme-color);
         padding: 15px;
         border-radius: 8px;
         width: 50%;
+        min-height: 120px;
         background-color: #eafaf8;
         margin-bottom: 10px;
         h3 {
-            margin-bottom: 10px;
             font-family: 'Lora', serif;
             font-weight: bold;
-            color: #2ABCA7;
+            color: var(--theme-color);
         }
     }
     #select_button{
@@ -61,29 +78,39 @@ body {
         width: fit-content;
         align-content: center;
         margin-left: auto;
-        .menuButton {
-            padding: 10px 20px;
-            font-size: 2em;
+        .logoutButton{
+            padding: 13px 5px;
+            font-size: 1.8em;
             cursor: pointer;
-            background-color: #2ABCA7;
+            background-color: var(--theme-color);
             border: 1px solid #EAFAF8;
             border-radius: 10px;
             color: #FAFAFA;
         }
-        .menuButton:hover {
-            background-color: #279c8f;
+        .menuButton {
+            padding: 10px 20px;
+            font-size: 2em;
+            cursor: pointer;
+            background-color: var(--theme-color);
+            border: 1px solid var(--theme-hover);
+            border-radius: 10px;
+            color: #FAFAFA;
+        }
+        .menuButton:hover , .logoutButton:hover{
+            background-color: var(--theme-hover);
         }
 
-        .menuButton:active {
-            background-color: #248f80;
+        .menuButton:active , .logoutButton:active{
+            background-color: var(--theme-hover);
             transform: scale(0.95);
         }
         .menu {
             display: none;
             position: absolute;
+            right: 0;
+            left: 0;
             background-color: white;
             border: 1px solid #ddd;
-            right: 0;
             box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
             border-radius: 8px;
             padding: 20px;
@@ -115,13 +142,13 @@ body {
             padding: 10px 20px;
             margin-right: 10px;
             cursor: pointer;
-            background-color: #2ABCA7;
+            background-color: var(--theme-color);
             color: white;
             border-radius: 5px 5px 0 0;
             font-weight: bold;
             border: 1px solid #ddd;
             &:hover {
-                background-color: #248f80;
+                background-color: var(--theme-hover);
             }
 
         }
@@ -129,7 +156,7 @@ body {
         .tab-content {
             border: 1px solid #ddd;
             border-top: none;
-            background-color: #fff;
+            background-color: var(--bg-glay);
             border-radius: 0 0 5px 5px;
             height: 40vh;
             overflow-y: auto;
@@ -154,7 +181,7 @@ body {
                     position: sticky;
                     top: 0;
                     z-index: 1;
-                    background-color: #2ABCA7;
+                    background-color: var(--theme-color);
                     border-top: #ddd;
                     color: white;
                     font-weight: bold;
@@ -168,7 +195,7 @@ body {
                     left: 0;
                     width: 100%;
                     height: 100%;
-                    background-color: #2ABCA7;
+                    background-color: var(--theme-color);
                     /*background-color: #fff;*/
                     z-index: -1;
                 }
@@ -187,7 +214,7 @@ body {
 
             /* スクロールバーのつまみ（ドラッグする部分） */
             &::-webkit-scrollbar-thumb {
-                background-color: #2ABCA7;
+                background-color: var(--theme-hover);
                 border-radius: 10px;
                 border: 3px solid #eeefef;
             }
@@ -195,12 +222,12 @@ body {
 
             /* スクロールバーのつまみをホバーした時のスタイル */
             &::-webkit-scrollbar-thumb:hover {
-                background-color: #248f80;
+                background-color: var(--theme-hover);
             }
         }
         .tab-switch:checked + .tab-label {
-            background-color: #fff;
-            color: #2ABCA7;
+            background-color: var(--bg-glay);
+            color: var(--theme-hover);
             border-bottom: 1px solid white;
         }
         .tab-switch:checked + .tab-label +.tab-blank  + .tab-content {
@@ -208,3 +235,4 @@ body {
         }
     }
 }
+
