--- a/templates/error.html
+++ b/templates/error.html
@@ -1,13 +1,22 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Error</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/error.css')}}">
+    <title>Error</title>
 </head>
 <body>
-    <h1>{{ title }}</h1>
-    <h3>{{ desc |safe}}</h3>
-    <a href="/login">トップに戻る</a>
+<div class="container">
+    <div class="head">
+        <h2>{{ title }}</h2>
+    </div>
+    <div class="body">
+        <h3>{{ desc |safe}}</h3>
+    </div>
+    <div class="foot">
+        <button id="return_button" onclick="location.href='/login'">トップに戻る</button>
+    </div>
+</div>
 </body>
 </html>
