--- a/templates/test.html
+++ b/templates/test.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="{{ url_for('static', filename='css/change-tab.css') }}">
+	<link rel="stylesheet" href="{{ url_for('static', filename='css/mypage.css') }}">
 	<title>Test</title>
 </head>
 <body>
