--- a/templates/mypages/mypage.html
+++ b/templates/mypages/mypage.html
@@ -24,30 +24,35 @@
         <fieldset id="information">
             <legend><h3>お知らせ！</h3></legend>
             {% if not is_completed_health %}
-            <p id="is_completed_health">☆☆☆今日の健康記録を入力してください☆☆☆  >> <a href="mypage:{{ User_code }}/edit/health">入力する</a></p>
+            <p id="is_completed_health">☆☆☆今日の健康記録を入力してください☆☆☆  >> <a href="/mypage:{{ User_code }}/edit/health">入力する</a></p>
             {% endif %}
 
             {% if not is_completed_activity %}
-            <p id="is_completed_activity">☆☆☆今日の行動記録を入力してください☆☆☆  >> <a href="mypage:{{ User_code }}/edit/activity">入力する</a></p>
+            <p id="is_completed_activity">☆☆☆今日の行動記録を入力してください☆☆☆  >> <a href="/mypage:{{ User_code }}/edit/activity">入力する</a></p>
             {% endif %}
 
             {% if ( is_completed_health and is_completed_activity) %}
                 <p>☆☆☆お知らせはありません☆☆☆</p>
             {% endif %}
         </fieldset>
-        <div id="select_button">
-            <button class="menuButton" data-menu="menu1">記入</button>
-            <div id="menu1" class="menu">
-                {% if not is_completed_health %}
-                <a href="/mypage:{{ User_code }}/edit/health">健康記録表</a>
-                {% endif %}
-                <a href="/mypage:{{ User_code }}/edit/activity">行動記録表</a>
-                <a href="/mypage:{{ User_code }}/edit/infection">感染記録表</a>
-                <a href="/mypage:{{ User_code }}/edit/vaccine">ワクチン接種記録表</a>
+        <div id="controller">
+            <div id="select_button">
+                <button class="menuButton" data-menu="menu1">記入</button>
+                <div id="menu1" class="menu">
+                    {% if not is_completed_health %}
+                        <a href="/mypage:{{ User_code }}/edit/health">健康記録表</a>
+                    {% endif %}
+                    <a href="/mypage:{{ User_code }}/edit/activity">行動記録表</a>
+                    <a href="/mypage:{{ User_code }}/edit/infection">感染記録表</a>
+                    <a href="/mypage:{{ User_code }}/edit/vaccine">ワクチン接種記録表</a>
+                </div>
+                <button class="logoutButton" onclick="location.href = '/mypage:{{ User_code }}/logout'">
+                    ログアウト
+                </button>
             </div>
-            <button class="logoutButton" onclick="location.href = '/mypage:{{ User_code }}/logout'">
-                ログアウト
-            </button>
+            <div id="filter">
+
+            </div>
         </div>
     </div>
     <div id="logs-table">
