--- a/templates/mypages/admin_mypage.html
+++ b/templates/mypages/admin_mypage.html
@@ -196,7 +196,7 @@
                     </tr>
                     </thead>
                     <tbody>
-                    {% for row in infected_data %}
+                    {% for row in infected %}
                         <tr>
                             {% for cell in row %}
                                 <td>{{ cell }}</td>
@@ -222,7 +222,7 @@
                     </tr>
                     </thead>
                     <tbody>
-                    {% for row in pre_infected_data %}
+                    {% for row in pre_infected %}
                         <tr>
                             {% for cell in row %}
                                 <td>{{ cell }}</td>
